--- a/src/main/resources/templates/homePage/fragments/cartContent.html
+++ b/src/main/resources/templates/homePage/fragments/cartContent.html
@@ -121,6 +121,13 @@
             <div class="d-flex justify-content-center">
               <form th:action="@{/cart/checkout}" method="post" id="checkout-form">
                 <input type="hidden" id="voucherMapping" name="voucherMapping" />
+                <div class="mb-3 text-start">
+                  <label class="form-label">Chọn phương thức thanh toán:</label><br>
+                  <input type="radio" id="vietqr" name="paymentMethod" value="vietqr">
+                  <label for="vietqr">QR Banking</label>
+                  <input type="radio" id="vnpay" name="paymentMethod" value="vnpay">
+                  <label for="vnpay">VNPay</label>
+                </div>
                 <button type="submit" class="btn btn-lg btn-success"
                         onclick="return confirm('Are you sure you want to check out?')">
                   Checkout
